--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
 *
 {
     font-family: 'Roboto', sans-serif;
-    color: #ffffff;
     border-radius: 7px;
 }
 
@@ -18,7 +17,7 @@ body
     z-index: 1000;
     width: 100%;
     height: 100%;
-    background: #333;
+    background: #ecf7ff;
     top: 0;
     left: 0;
     overflow: hidden;
@@ -52,7 +51,7 @@ header, main, footer, nav
 
 .standard
 {
-    background: #95a792;
+    background: #ecf7ff;
 }
 
 main
@@ -105,14 +104,15 @@ article
     width: 15.7%;
     margin: 1%;
     border-style: solid;
-    border-color: #333;
+    border-color: #b9c1c7;
     border-width: 1px;
     padding: 1%;
-    /* transition: 1s; */
+    transition: 0.3s;
 }
 .produkt:hover
 {
     cursor: pointer;
+    box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.2);
 }
 
 .produktbild
