--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,12 @@
 {
     font-family: 'Roboto', sans-serif;
     border-radius: 7px;
+    color: #ffffff;
 }
 
 body
 {
-    background: #e3d9ca;
+    background: #000000;
 }
 
 #backvid
@@ -25,7 +26,7 @@ body
     z-index: 1000;
     width: 100%;
     height: 100%;
-    background: #ecf7ff;
+    background: #000000;
     top: 0;
     left: 0;
     overflow: hidden;
@@ -59,9 +60,21 @@ header, main, footer, nav
     text-align: center;
 }
 
+nav
+{
+    text-align: right;
+}
+
 .standard
 {
-    background: #ffffff;
+    background: #1a1a1a;
+}
+
+
+
+h1
+{
+    font-family: 'Playfair Display', serif;
 }
 
 main
@@ -83,14 +96,16 @@ header
 .kopf
 {
     overflow: hidden;
-    height: 200px;
+    height: 300px;
     width: 100%;
+    padding-top: 70px;
 }
 
 #headinhalt
 {
     text-align: center;
-    background: #aaa;
+    background: rgb(43, 43, 43);
+    background-image: url(../img/stonesdark.jpg);
     text-align: center;
     z-index: 100;
 
@@ -118,11 +133,18 @@ article
     border-width: 1px;
     padding: 1%;
     transition: 0.3s;
+    background: #ffffff;
 }
+
 .produkt:hover
 {
     cursor: pointer;
     box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.2);
+}
+
+.produkt h3
+{
+    color: #000000;
 }
 
 .produktbild
