--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 *
 {
-    font-family: 'Roboto', sans-serif;
-    border-radius: 7px;
+    font-family: 'Overpass', sans-serif;
+    border-radius: 5px;
     color: #ffffff;
 }
 
@@ -39,9 +39,24 @@ body
     margin-top: 20vh;
 }
 
+button, .produkt h3
+{
+    padding: 10px;
+    color: #aa72f3;
+    background: #56387e;
+    border-style: none;
+    min-width: 100px;
+    transition: 0.7s;
+}
+
+button:hover
+{
+    color: #ccb2ee;
+    background: #68587e;
+}
+
 #startbutton
 {
-    color: #333;
     font-size: 14pt;
 }
 
@@ -72,7 +87,7 @@ nav
 
 
 
-h1
+h1, button
 {
     font-family: 'Playfair Display', serif;
 }
@@ -128,24 +143,19 @@ article
 {
     width: 15.7%;
     margin: 1%;
-    border-style: solid;
-    border-color: #b9c1c7;
     border-width: 1px;
     padding: 1%;
     transition: 0.3s;
-    background: #ffffff;
+    background: #333333;
+    /* opacity: 0.8 !important	; */
 }
 
 .produkt:hover
 {
     cursor: pointer;
-    box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 15px 1px rgba(139, 103, 168, 0.801);
 }
 
-.produkt h3
-{
-    color: #000000;
-}
 
 .produktbild
 {
