--- a/css/main.css
+++ b/css/main.css
@@ -5,10 +5,6 @@
     color: #ffffff;
 }
 
-/* body
-{
-    background: #000000;
-} */
 
 #backvid
 {
@@ -86,14 +82,9 @@ nav
     text-align: right;
 }
 
-/* .standard
-{
-    background: #1a1a1a;
-} */
 
 
-
-h1, button
+button
 {
     font-family: 'Playfair Display', serif;
 }
@@ -103,15 +94,12 @@ main
     min-height: 700px;
 }
 
-a
-{
-
-}
-
 header
 {
     height: 200px;
-    text-align: center;
+    overflow: hidden;
+    width: 72%;
+    padding: 0;
 }
 
 .kopf
@@ -119,22 +107,27 @@ header
     overflow: hidden;
     height: 300px;
     width: 100%;
-    padding-top: 70px;
-}
-
-#headinhalt
-{
-    text-align: center;
-    background: rgb(43, 43, 43);
-    background-image: url(../img/stonesdark.jpg);
+    padding-top: 60px;
+    margin: 0;
     text-align: center;
     z-index: 100;
-
+    background-size: cover;
 }
 
-#video
+#headsteine
 {
-    z-index: -1;
+
+    background-image: url(../img/stonesdark.jpg);
+}
+
+#headgames
+{
+    background-image: url(../img/gamesdark.jpg);
+}
+
+#beschreibungstext
+{
+    font-family: 'PT Sans', sans-serif;
 }
 
 article
